feat(inference,ts-runtime): dotenv support, provider config, and test fixes (#58)
- ts-runtime: add dotenv support and project scaffolding
  - load env from `.env` in Typescript Runtime service
  - add README and .gitignore updates
- inference: introduce strongly-typed `ProviderProperties` and Spring bean config
  - add `InferenceServiceConfig` for centralized bean wiring
  - enhance `InferenceService` to build `ChatLanguageModel` for OpenAI/Anthropic/Gemini
  - support optional `baseUrl` per provider (e.g., gateway endpoints)
  - merge token usage across tool-calling turns; improve logging with correlationId
  - convert `ToolSpec` to LangChain4j `ToolSpecification`
- tools: register `RetrieveContextTool` and `RunTsCodeTool` in `NativeToolsRegistryConfig`
- typescript client: allow base URL configuration and add docs fetching API
  - `TypescriptRuntimeClient`: default `baseUrl` and `fetchDocs(namespace, cleanup)` endpoint
- kb: fix knowledge base signature calculation to avoid out-of-scope files causing refreshes
- telemetry: simplify/configure OTEL exporters and resource attributes
- config: update `application.yaml` for providers, OTEL, KB, and TS runtime
- tests: fix TypeScript tests with base URL; update Java tests/naming to new config

Refs:
- b3578dc: add dotenv support for TypeScript runtime
- d77de68: fix TypeScript tests with base URL
- 472d0a1: KB signature scope fix
- a535581: test fixes and naming conventions

BREAKING CHANGES:
- The provider configuration has been renamed and reshaped:
  - `ProviderConfig` -> `ProviderProperties`
  - Configuration prefix is now `providers.*` with keys in camelCase
    (e.g., `providers.providers.openai.apiKey`, `baseUrl`, `modelName`, and
    `providers.default-provider` for default selection).
  - Update `application.yaml`/environment variables to the new structure.
- Bean wiring: use `InferenceServiceConfig#inferenceService(ProviderProperties, NativeToolsRegistry)`
  instead of constructing `InferenceService` manually